<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mnadimut.myappportfolio.MainActivity"
    android:gravity="top"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:id="@+id/textView"
        android:layout_marginTop="47dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="102"
        android:textAlignment="center"
        android:useDefaultMargins="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layoutMode="opticalBounds"
        android:padding="@dimen/abc_action_bar_content_inset_material">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/str_project_0"
            android:id="@+id/btn_popular_movies"
            android:layout_row="1"
            android:layout_column="1"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#f8854b"
            android:padding="@dimen/abc_button_inset_horizontal_material"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20dp"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:onClick="showToast" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/str_project_1"
            android:id="@+id/btn_stock_hawk"
            android:layout_row="50"
            android:layout_column="1"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#f8854b"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20dp"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:onClick="showToast" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/str_project_2"
            android:id="@+id/btn_build_it_bigger"
            android:layout_row="54"
            android:layout_column="1"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#f8854b"
            android:padding="@dimen/abc_button_inset_horizontal_material"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20dp"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:onClick="showToast" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/str_project_3"
            android:id="@+id/btn_make_material"
            android:layout_row="72"
            android:layout_column="1"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#f8854b"
            android:padding="@dimen/abc_button_inset_horizontal_material"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20dp"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:onClick="showToast" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/str_project_4"
            android:id="@+id/btn_go_ubiquitous"
            android:layout_row="83"
            android:layout_column="1"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#f8854b"
            android:padding="@dimen/abc_button_inset_horizontal_material"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20dp"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:onClick="showToast" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/str_project_5"
            android:id="@+id/btn_capstone"
            android:layout_row="100"
            android:layout_column="1"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:background="#f8854b"
            android:padding="@dimen/abc_button_inset_horizontal_material"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20dp"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:onClick="showToast" />

    </GridLayout>

</RelativeLayout>
